making changes in html filejs and css file, look at comments on files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather in my city</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
+  <body class="wrapper">
     <main>
       <h1 class="label">Weather in my city</h1>
       <form id="search">
